Fix squashed images in Internet Explorer

--- a/site/scss/site/_header.scss
+++ b/site/scss/site/_header.scss
@@ -230,13 +230,13 @@ background: $colour-brand;
 	img {
 		border-radius: 50%;
 		margin-right: 0.5rem;
-		max-width: 2rem;
-		max-height: 2rem;
+		width: 2rem;
+		height: 2rem;
 		vertical-align: middle;
 
 		@media (min-width: $mq-header-narrow) {
-			max-width: 1.25rem;
-			max-height: 1.25rem;
+			width: 1.25rem;
+			height: 1.25rem;
 			margin-right: 0.25rem;
 		}
 	}
